force-app/main/default/objects/dw_ecard_archive_employee_user__x/dw_ecard_archive_employee_user__x.object-meta.xml
<CustomObject>
    <description>dw_ecard_archive$employee_user</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_ecard_archive$employee_user</externalName>
    <label>dw_ecard_archive$employee_user</label>
    <pluralLabel>dw_ecard_archive$employee_user</pluralLabel>
</CustomObject>