force-app/main/default/objects/dw_ecard_archive_employee_user__x/fields/employee_id__c.field-meta.xml
<CustomField>
    <fullName>employee_id__c</fullName>
    <description>employee_id</description>
    <externalDeveloperName>employee_id</externalDeveloperName>
    <label>employee_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>